--- a/src/style.css
+++ b/src/style.css
@@ -303,6 +303,7 @@ aside h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 600px;
 }
 
 #statsTitle {
@@ -314,18 +315,40 @@ aside h1 {
 .stats-embed {
     background-color: var(--clr-cards);
     min-height: 60%;
-    width: 60%;
+    width: max(500px, 60%);
+    /* width: 500px; */
     border-radius: 16px;
     padding: var(--gap-local);
     box-shadow: var(--shadow);
 }
 
-.stats {
+#stats {
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: var(--gap-local)
+    width: 100%;
+    box-shadow: inset 0 0 10px 10px rgba(0,0,0,0.2);
+    background-color: var(--clr-content);
+    border-radius: 16px;
+    padding: 2em;
 }
+
+td {
+    padding: 1em;
+    font-weight: 900;
+    font-size: 1.2em;
+}
+
+td:first-child::before {
+    content: "\0025CB\000020";
+}
+
+
+/* td:nth-child(2) {
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
+} */
+
+
 /************FORM****************/
 dialog {
     --gap: 1.5rem;
