--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ a {
 button {
     cursor: pointer;
     border: none;
-    transition: all 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out;
 }
 
 *:not(i) {
@@ -172,7 +172,7 @@ aside h1 {
     /* width: fit-content; */
     height: 3em;
     font-size: 1.2em;
-    transition: all 0.05s ease-in-out;
+    transition: transform 0.075s ease-in-out, filter 0.075s ease-in-out;
 }
 
 .sidebar-button:hover, .sidebar-button.active {
@@ -200,6 +200,7 @@ aside h1 {
 .card.offenses:hover { border: 2px solid var(--clr-failure); }
 
 /* Cards */
+
 #content:has(.card) {
     z-index: 1;
     display: grid;
@@ -211,6 +212,7 @@ aside h1 {
 
 .card {
     --border-radius: 16px;
+    --anim-time: 0.2s;
     font-size: 90%;
 
     position: relative;
@@ -223,7 +225,7 @@ aside h1 {
     border-radius: var(--border-radius);
     border: 2px solid transparent;
     box-shadow: var(--shadow);
-    transition: all 0.2s ease-in-out;
+    transition: box-shadow var(--anim-time) ease-in-out, border var(--anim-time) ease-in-out;
 }
 
 .card:hover {
@@ -240,7 +242,7 @@ aside h1 {
     height: 100%;
     width: 100%;
     border-radius: var(--border-radius);
-    transition: all 0.2s ease-in-out;
+    transition: transform var(--anim-time) ease-in-out;
 }
 
 .card-header {
@@ -312,7 +314,7 @@ aside h1 {
     height: 28px;
     cursor: pointer;
     filter: invert(83%) sepia(7%) saturate(1021%) hue-rotate(187deg) brightness(84%) contrast(91%);
-    transition: all 0.15s ease-in-out;
+    transition: transform 0.15s ease-in-out, filter 0.15s ease-in-out;
 
 }
 
@@ -320,9 +322,9 @@ aside h1 {
     transform: scale(1.2);
     filter: invert(83%) sepia(7%) saturate(1021%) hue-rotate(187deg) brightness(84%) contrast(91%) drop-shadow(0 0 10px white);
 }
+
 /*******CONTENT:STATS************/
 #content:has(.stats-embed) {
-    padding: var(--gap-local);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -365,6 +367,42 @@ td:first-child::before {
     content: "\0025CB\000020";
 }
 
+/*******CONTENT:SPEND************/
+
+#content:has(.spend-embed) {
+    display: grid;
+    place-items: center;
+}
+
+.spend-embed {
+    background-color: var(--clr-cards);
+    border-radius: 16px;
+    padding: var(--gap-local);
+    box-shadow: var(--shadow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
+.spend-embed * {
+    width: 100%;
+}
+
+.points-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.points-container {
+    margin: 0 auto;
+}
+
+#spendFormBtn {
+    margin-top: 2em;
+}
+
 /************FORM****************/
 dialog {
     --gap: 1.5rem;
@@ -394,7 +432,7 @@ dialog {
     }
 }
 
-form {
+dialog form {
     display: flex;
     flex-direction: column;
     gap: var(--gap);
@@ -472,7 +510,7 @@ input:invalid {
 
 .feedback {
     background-color: green;
-    transition: all 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
     height: 100%;
     width: 100%;
     font-size: 1rem;
